<?xml version="1.0"?>
<package format="2">
  <name>kd45_controller</name>
  <version>0.0.1</version>
  <description>Reactive JointTrajectoryControllers for a KD45 equipped two-finger gripper.</description>

  <maintainer email="llach@techfak.uni-bielefeld.de">llach</maintainer>

  <license>BSD</license>

  <author>Luca Lach</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tactile_msgs</depend>
  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>roscpp</depend>

  <export>
    <controller_interface plugin="${prefix}/kd45_controller_plugins.xml"/>
  </export>
</package>
